--- a/MyWalletApp/app/src/main/AndroidManifest.xml
+++ b/MyWalletApp/app/src/main/AndroidManifest.xml
@@ -8,15 +8,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WalletManagerActivity" />
-        <activity android:name=".ItemActivity" />
+        <activity
+            android:name=".WalletManagerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ItemActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".ReportDetailActivity"></activity>
     </application>
 
